# cross-compile-macosx-clang-windows-msvc

./: .gitignore  Makefile  README.md  dll.cpp  dllmain.cpp  lib.cpp  libmain.cpp  main.c  plugin.cpp  test.bat
cmake_example/: .gitignore  CMakeLists.txt  README.md  clean  cmake_crosswindows  cmake_native  cmake_raspberrypi  cmake_windows  cmake_windows.bat  test  test.bat
cmake_example/Modules/: MSVCRuntime.cmake  Native32.cmake  Native64.cmake  RaspberryPi.cmake  Windows32.cmake  Windows64.cmake
cmake_example/Modules/Platform/: LlvmWindowsCrossCompile.cmake  copy_msvc  install-msvc-sysroot.sh  install-msvc-toolchain.sh  install-raspberrypi-sysroot.sh  install-raspberrypi-toolchain.sh
makefile_example/: Makefile  README.md  dll.cpp  dllmain.cpp  plugin.cpp  test.bat
src/: dll.cpp  dllmain.cpp  lib.cpp  libmain.cpp  main.cpp  plugin.cpp  plugin.def  pluginmain.cpp  resource.rc
